some more files

--- a/index.html
+++ b/index.html
@@ -7,10 +7,28 @@
 </head>
 <body>
 <header>
-    <?php include'/php/header.php'; ?>
+    <?php include '/php/header.php'; ?>
+    <?php include '/php.navigation.php'; ?>
 </header>
-    
-<footer>
+    <section>
+        <h2>Home Page</h2>
+        <h3>Kirill Penkov COMP3512 <a href="https://github.com/kpenkov98/f2023-assign1.git" target="_blank">Github</a></h3>
+        <p>This purpose of this assignment is to create a multi-page PHP website with database integration. Allowing users to browse, seach and favorite their music.</p>        
+    </section>
+    <section>
+        <h2>Song Information</h2>
+        <li>Top Genres</li>
+        <li>Top Artists</li>
+        <li>Most Popular Song</li>
+        <li>One-Hit Wonder</li>
+        <li>Longest Acoustic Song</li>
+        <li>At The Club</li>
+        <li>Running Songs</li>
+        <li>Studying Songs</li>
+    </section>
+
+
+    <footer>
     <?php include'/php/footer.php'; ?>
 
 </footer>
